kustomization/worsica-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: worsica-ingress
  namespace: worsica
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: worsica-cert-key
  rules:
  - host: worsica.incd.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-frontend
            port:
              number: 8001
  - host: worsica-nextcloud.a.incd.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 8080
